--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
